# elevenlabs-sdk-rs

./: AGENTS.md
crates/elevenlabs-sdk/: Cargo.toml
crates/elevenlabs-sdk/src/: client.rs  error.rs  middleware.rs
crates/elevenlabs-sdk/src/services/: agents.rs  audio_isolation.rs  audio_native.rs  music.rs  speech_to_speech.rs  speech_to_text.rs  studio.rs  text_to_dialogue.rs  text_to_speech.rs  voices.rs
crates/elevenlabs-sdk/src/ws/: conversation.rs  mod.rs  tts.rs
