[package]
name = "elevenlabs-sdk"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/UserGeneratedLLC/elevenlabs-sdk-rs"
description = "Comprehensive async Rust SDK for ElevenLabs API with TTS, STT, voice management, and WebSocket streaming"
readme = "../../README.md"
homepage = "https://github.com/UserGeneratedLLC/elevenlabs-sdk-rs"
documentation = "https://docs.rs/elevenlabs-sdk"

keywords = [
    "elevenlabs",
    "tts",
    "stt",
    "voice",
    "websocket",
]
categories = [
    "api-bindings",
    "asynchronous",
    "multimedia::audio",
    "network-programming",
]

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
futures-core = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "http2",
    "json",
    "stream",
] }
hpx-transport = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt", "macros", "time"] }
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
wiremock = "0.6.5"
